fixed notes toolbar and scrollbar

--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -1,5 +1,6 @@
 .notes-parent-panel {
     height: 100%;
+    margin-top: 75px;
     overflow-y: scroll;
     background-image: linear-gradient(0deg, transparent 24%, rgba(177, 235, 249, 1) 25%, rgba(177, 235, 249, 1) 26%, transparent 27%, transparent 74%, rgba(177, 235, 249, 1) 75%, rgba(177, 235, 249, 1) 76%, transparent 77%, transparent);
     background-size:50px 50px;
@@ -8,25 +9,22 @@
 
 }
 
-.notes-parent-panel::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
-}
-.notes-parent-panel::-webkit-scrollbar
-{
-	width: 2%;
-	background-color: #F5F5F5;
-}
+/*.notes-parent-panel::-webkit-scrollbar-track {*/
+	/*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+	/*border-radius: 10px;*/
+	/*background-color: #ffffff;*/
+/*}*/
 
-.notes-parent-panel::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
-}
+/*.notes-parent-panel::-webkit-scrollbar {*/
+	/*width: 2%;*/
+	/*background-color: #ffffff;*/
+/*}*/
 
+/*.notes-parent-panel::-webkit-scrollbar-thumb {*/
+	/*border-radius: 10px;*/
+	/*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);*/
+	/*background-color: #31C3E7;*/
+/*}*/
 
 .notes-component {
     width: 100%;
@@ -36,7 +34,7 @@
 }
 
 .toolbar {
-    width: 98%;
+    width: 100%;
     height: 75px;
     top: 0;
     bottom: 0;
@@ -59,7 +57,7 @@
 .editor {
     text-align: left;
     padding-left: 10px;
-    margin-top: 93px;
+    margin-top: 18px;
     line-height: 25px;
 }
 
@@ -92,4 +90,8 @@
     box-shadow: 2px 2px #999;
     border: none;
     transform: translateY(4px);
+}
+
+.searchSave {
+    min-width: 275px;
 }
